# redo-list

./: .babelrc  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  README.md  jest.config.js  next.config.js  package.json  pnpm-lock.yaml  postcss.config.js  script.md  tailwind.config.js  tsconfig.json
icon/: icon.ai
src/: store.ts
src-tauri/: Cargo.toml  globals.rs  tauri.conf.json
src-tauri/src/: documents.rs  error.rs  globals.rs  kanbans.rs  main.rs  myday.rs  todos.rs
src/__test__/features/todos/: todosSlice.spec.ts
src/components/: Button.tsx  Calendar.tsx  Checkbox.tsx  Chip.tsx  Date.tsx  Header.tsx  Icon.tsx  IconButton.tsx  Layout.tsx  Logo.tsx  NoSsr.tsx  Sidebar.tsx  Title.tsx  TransparentInput.tsx
src/features/documents/: DocumentEditor.tsx  DocumentViewer.tsx  TransparentEditor.tsx  documentSlice.ts  documentSlice.tsx  fileImage.tsx
src/features/kanbans/: AddKanban.tsx  KanbanItem.tsx  Kanbans.tsx  kanbansSlice.ts
src/features/myday/: mydaySlice.ts
src/features/todos/: TodoBreadcrumb.tsx  TodoCompleted.tsx  TodoDate.tsx  TodoDescription.tsx  TodoDuration.tsx  TodoEditor.tsx  TodoImportant.tsx  TodoItem.tsx  TodoList.tsx  TodoMultiselect.tsx  TodoProgress.tsx  TodoTags.tsx  TodoTitle.tsx  todosSlice.tsx
src/lib/: common.ts  tauri.ts  utils.ts
src/pages/: _app.tsx  _document.tsx  dashboard.tsx  index.tsx  kanban.tsx  settings.tsx  tasks.tsx
src/pages/api/: todos.ts
src/styles/: globals.scss
src/todos/: todosSlice.spec.ts
