[package]
name = "grade-todo"
version = "0.0.0"
description = "A todo list app for students with extra features"
authors = ["Yubo Cao <cao2006721@gmail.com>"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-read-file", "path-all", "shell-open"] }
directories = "4.0"
sled = "0.34.7"
lazy_static = "1.4.0"
image = "0.24.5"
rust-crypto = "^0.2"
async-std = "1.12.0"
tokio = "1.24.1"
window-vibrancy = "0.3.2"
regex = "1.7.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
